--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -97,4 +97,6 @@ steps:
         echo "Branch '$BRANCH_NAME' does not represent an oficial environment."
         echo "*******************************************************************************"
       fi
+substitutions:
+    BRANCH_NAME: test
 # [END tf-apply]      
