small change branch

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,7 +25,7 @@
 #         fi
 steps:
 - id: 'branch name'
-  name: 'alpine'
+  name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: 'sh'  
   args: 
   - '-c'
@@ -97,4 +97,6 @@ steps:
         echo "Branch '$BRANCH_NAME' does not represent an oficial environment."
         echo "*******************************************************************************"
       fi
+# substitutions:
+#     BRANCH_NAME: test
 # [END tf-apply]      
