--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,12 +25,13 @@
 #         fi
 steps:
 - id: 'branch name'
-  name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  name: 'alpine'
   entrypoint: 'sh'  
   args: 
   - '-c'
   - | 
       echo "***********************"
+      git ls-tree -r --name-only ${BRANCH_NAME}
       echo "$BRANCH_NAME"
       echo "***********************"
 - id: 'tf init'
