--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -30,7 +30,8 @@ steps:
   args: 
   - '-c'
   - | 
-      echo "the branch is ***********************"
+      echo "the branch is *********************** $BRANCH_NAME"
+      BRANCH_NAME = 'test'
       git ls-tree -r --name-only ${BRANCH_NAME}
       echo "$BRANCH_NAME"
       echo "***********************"
